# nix_shell_utils

./: .readthedocs.yaml  README.rst  clean.py  gpush.py  pyproject.toml  release.py  rundocs.py
.github/workflows/: python-app.yml  test.yml~
docs/: #nix_shell_utils.rst#  .#nix_shell_utils.rst  conf.py  genbadges  index.rst  nix_shell_utils.rst  nix_shell_utils.rst.mask  requirements.in~  requirements.txt
nix_shell_utils/: __init__.py  __init__.py~
test/: modified.txt  original_again.txt  test_regression.py
